syntax = "proto3";
package CKPacket;

message resPlayerJoin {
}
message reqPing {
}
message resPing {
}

message reqPlayerPosition {
	optional float x = 1;
	optional float y = 2;
	optional float z = 3;

	optional int32 index = 4;
}
message resPlayerPosition {
	optional float x = 1;
	optional float y = 2;
	optional float z = 3;

	optional int32 index = 4;
}

message resReplicatedPlayerGen {
	optional int32 index = 1;
}
message resReplicatedPlayerDes {
	optional int32 index = 1;
}
message reqReplicatedPlayerGen {

}
message reqReplicatedPlayerDes {
	optional int32 index = 1;
}

message reqChangePlayerColor{
	optional int32 index = 1;
	optional float R = 2;
	optional float G = 3;
	optional float B = 4;
	optional float A = 5;
}

message resChangePlayerColor{
	optional int32 index = 1;
	optional float R = 2;
	optional float G = 3;
	optional float B = 4;
	optional float A = 5;
}